<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEnglish"/>
        <Button
            android:id="@+id/btnJapanese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnJapanese"/>
        <Button
            android:id="@+id/btnRussian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRussian"/>
    </LinearLayout>

    <TableLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:shrinkColumns="*" android:stretchColumns="*"
        android:layout_below="@+id/layoutLanguage">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btnHaveFun"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_boder"
                android:text="@string/btnHaveFun"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btnDoSomething"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_boder"
                android:text="@string/btnDoSomething"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btnClickHere"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_boder"
                android:text="@string/btnClickHere" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btnSurprise"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_boder"
                android:text="@string/btnSurprise"/>
        </TableRow>


    </TableLayout>

</RelativeLayout>
